[workspace]
members = [
  "crates/arxiv-api",
  "crates/oai-pmh",
  "crates/paper-store",
  "crates/harvester",
  "crates/arxiv-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
urlencoding = "2"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
httpmock = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
