[package]
name = "paper-store"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arxiv-api = { path = "../arxiv-api" }
rusqlite.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
